Import ncp3-gate c3f22ac78e93 Changed RELEASE and changelog files for second build with additional backports

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nexenta-on-source (5.11.134-3) hardy; urgency=low
+
+  * Rebuild with newer patches 
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 24 Feb 2010 22:09:29 -0800
+
 nexenta-on-source (5.11.134-2) hardy; urgency=low
 
   * Update to onnv-134 with actual closed and crypto binaries
