--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nexenta-on-source (5.11.134-4) hardy; urgency=low
+
+  * New build with a lot of backports added as patches. 
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 03 Mar 2010 06:50:53 -0800
+
 nexenta-on-source (5.11.134-3) hardy; urgency=low
 
   * Rebuild with newer patches 
