--- a/debian/packages/nexenta-sunw/debian/changelog
+++ b/debian/packages/nexenta-sunw/debian/changelog
@@ -1,3 +1,9 @@
+nexenta-sunw (5.11.134-5) hardy; urgency=low
+
+  * Made changes to the way release date is caluclated
+
+ -- Nexenta Systems <support@nexenta.com>  Mon, 08 Mar 2010 10:35:40 -0800
+
 nexenta-sunw (5.11.134-4) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
