Import ncp3-gate 6a4f35f904db Second backport set for beta2 bkport-11904:0553a8f29c9d-format_dumps_accessing_iscsi.fix bkport-11909:f598a828b3c6-stmf_iscsi.fix bkport-11910:33cd7a04cb44-dlmgmtd_leaks.fix

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nexenta-on-source (5.11.134-6) hardy; urgency=low
+
+  * Upgrade to beta2 
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 12 Mar 2010 07:42:29 -0800
+
 nexenta-on-source (5.11.134-4) hardy; urgency=low
 
   * New build with a lot of backports added as patches. 
