Import ncp3-gate cf6a3eb03e93 134-7 patch set bkport-11911:1ff4cad6d0b8-scsi_vhci_retry.fix bkport-11912:717bd6554f03-dlmgmtd_leaks_lint.fix bkport-11914:f42bb55c4bfe-gcm_crypto.fix bkport-11917:a1810ef2e242-nxge_undef_ref.fix bkport-11920:4618932f3ed5-mptsas_bug_fixes bkport-11925:b2fbcbf3d929-sata_vpd_b1_support.fix bkport-11926:82591d6efd2c-pmcs_panic_loop.fix

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nexenta-on-source (5.11.134-7) hardy; urgency=low
+
+  * Dropping NFS client patches, causing deadlock on PXE install
+  * New patches, bug fixes for mptsas and pmcs
+
+ -- Nexenta Systems <support@nexenta.com>  Mon, 15 Mar 2010 13:40:42 -0700
+
 nexenta-on-source (5.11.134-6) hardy; urgency=low
 
   * Upgrade to beta2 
