Import ncp3-gate cb71baf644d1 sunwkvm bump to trigger reboot

--- a/debian/packages/sunwkvm/debian/changelog
+++ b/debian/packages/sunwkvm/debian/changelog
@@ -1,3 +1,9 @@
+sunwkvm (5.11.134-5) nexenta; urgency=low
+
+  * bump, to trigger upgrade
+
+ -- Nexenta Systems <maintainer@nexenta.com>  Fri, 09 Apr 2010 15:13:55 -0700
+
 sunwkvm (5.11.134-4) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
