--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nexenta-on-source (5.11.134-10) hardy; urgency=low
+
+  * bump
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 18 May 2010 20:32:36 -0700
+
 nexenta-on-source (5.11.134-9) hardy; urgency=low
 
   * 134d, ZFS bug fixes mostly
