Import ncp3-gate 7f531ae2cdaf 3.0.3 zfs bkports    bkport-16aef3d16470-ddt-deadlock-panic-fix.patch    bkport-3c3a4d3d1dda-zfs-delete-share-fix.patch    bkport-54258108784b-snapshot-deletion-fix.patch    bkport-bb02b9cd2b96-zfs-mutex-fix.patch    bkport-c8a3959209ef-zpool-vdev-name-fix.patch    bkport-f12a527894a8-set-volsize-fix.patch

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nexenta-on-source (5.11.134-11) hardy; urgency=low
+
+  * 3.0.3 updates
+
+ -- Nexenta Systems <maintainer@nexenta.com>  Thu, 10 Jun 2010 16:58:00 -0700
+
 nexenta-on-source (5.11.134-10) hardy; urgency=low
 
   * bump
