--- a/debian/packages/sunwfmd/debian/changelog
+++ b/debian/packages/sunwfmd/debian/changelog
@@ -1,3 +1,9 @@
+sunwfmd (5.11.134-11a) nexenta; urgency=low
+
+  * Bug #1385: KERNEL: hot-plug needs to be enabled by default
+
+ -- Garrett D'Amore <garrett@nexenta-vm>  Fri, 18 Jun 2010 19:39:09 -0700
+
 sunwfmd (5.11.134-11) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
