--- a/debian/packages/sunwmptsas/debian/changelog
+++ b/debian/packages/sunwmptsas/debian/changelog
@@ -1,3 +1,9 @@
+sunwmptsas (5.11.134-11a) nexenta; urgency=low
+
+  * Various fixes for mpt_sas from OpenSolaris.
+
+ -- Garrett D'Amore <garrett@nexenta-vm>  Wed, 30 Jun 2010 23:15:04 -0700
+
 sunwmptsas (5.11.134-11) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
