--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-11a) nexenta; urgency=low
+
+  * Issue 1861: NFS server is responding to wrong IP-address (NFSv3, UDP)
+
+ -- Garrett D'Amore <garrett@nexenta.com>  Thu, 08 Jul 2010 16:39:09 -0700
+
 sunwckr (5.11.134-11) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
