--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-12) nexenta; urgency=low
+
+  * Issue 1906: ZFS ACL Fix (Cchangeset 12fcd99a642d) 
+
+ -- Gate Keeper <maintainer@nexenta.com>  Fri, 15 July 2010 23:00:03 -0700
+
 sunwzfskr (5.11.134-11) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
