--- a/debian/packages/sunwemlxs/debian/changelog
+++ b/debian/packages/sunwemlxs/debian/changelog
@@ -1,3 +1,9 @@
+sunwemlxs (5.11.134-12) nexenta; urgency=low
+
+  * Issue 1790: Emulex LP9002 fix
+
+ -- Gate Keeper <maintainer@nexenta.com>  Fri, 15 July 2010 23:00:03 -0700
+
 sunwemlxs (5.11.134-11) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
