--- a/debian/packages/sunwiscsitr/debian/changelog
+++ b/debian/packages/sunwiscsitr/debian/changelog
@@ -1,3 +1,9 @@
+sunwiscsitr (5.11.134-12a) nexenta; urgency=low
+
+  * Patched iscsit_tgt.c ,backport Fix: 6936691
+
+ -- Nexenta Systems <maintainer@nexenta.com>  Fri, 30 Jul 2010 06:00:59 -0700
+
 sunwiscsitr (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
