--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-12a) nexenta; urgency=low
+
+  * Edited pc.ti fixes Bug: 2109
+
+ -- Nexenta Systems <maintainer@nexenta.com>  Thu, 05 Aug 2010 06:23:25 -0700
+
 sunwcsu (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
