Import ncp3-gate 674646364ea4 re #2262 pktool/lofiadm changes to have uninterrupted access to command functionalities.    zfs_crypto_workaround_pktool_lofiadm.patch

--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-12b) nexenta; urgency=low
+
+  * Issue #2262 pktool/lofiadm changes for zfs crypto workaround.
+
+ -- Nexenta Systems <maintainer@nexenta.com>  Fri, 20 Aug 2010 21:12:43 +0530
+
 sunwcsu (5.11.134-12a) nexenta; urgency=low
 
   * Edited pc.ti fixes Bug: 2109
