Import ncp3-gate 131d82f841d5 NX: 2403 fmd memory footprint constantly increasing Reviewed by: dmitry@nexenta.com Approved by: dmitry@nexenta.com    zfs-monitor-leak.patch

--- a/debian/packages/sunwfmd/debian/changelog
+++ b/debian/packages/sunwfmd/debian/changelog
@@ -1,3 +1,9 @@
+sunwfmd (5.11.134-13) nexenta; urgency=low
+
+  * Bug #2403: fmd memory footprint constantly increasing
+
+ -- Garrett D'Amore <garrett@nexenta.com>  Thu, 02 Sep 2010 13:39:52 -0700
+
 sunwfmd (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
