--- a/debian/packages/sunwtoo/debian/changelog
+++ b/debian/packages/sunwtoo/debian/changelog
@@ -1,3 +1,9 @@
+sunwtoo (5.11.134-100) nexenta; urgency=low
+
+  * Issue 2626: Fix for zfs panic in dmu_objset_stats
+
+ -- Vineeth Pillai <vineeth@nexenta.com>  Fri, 01 Oct 2010 23:25:24 +0530
+
 sunwtoo (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
