--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-100) nexenta; urgency=low
+
+  * Issue 2626: Fix for zfs panic in dmu_objset_stat
+
+ -- Vineeth Pillai <vineeth@nexenta.com>  Fri, 01 Oct 2010 23:13:22 +0530
+
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
   * Issue 1928: ZFS WORM fix for CIFS interaction 
