--- a/debian/packages/sunwzfsu/debian/changelog
+++ b/debian/packages/sunwzfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsu (5.11.134-100) nexenta; urgency=low
+
+  * Issue 2626: Fix for zfs panic in dmu_objset_stat
+
+ -- Vineeth Pillai <vineeth@nexenta.com>  Fri, 01 Oct 2010 23:23:40 +0530
+
 sunwzfsu (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
