--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-100) nexenta; urgency=low
+
+  * Issue 2636 lofiadm/pktool changes for ZFS crypto over lofi devices.
+
+ -- Vineeth Pillai <vineeth@nexenta.com>  Wed, 20 Oct 2010 20:37:40 +0530
+
 sunwcsu (5.11.134-13) nexenta; urgency=low
 
   * Issue 2406: idmap should map unresolvable SIDs by default.
