--- a/debian/packages/sunwsmbsu/debian/changelog
+++ b/debian/packages/sunwsmbsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbsu (5.11.134-100) nexenta; urgency=low
+
+  * Issue 2611: Fix memory leak in smbd/libsmb smb_idmap_getsid
+
+ -- Albert Lee <trisk@nexenta.com>  Fri, 10 Dec 2010 19:39:01 -0500
+
 sunwsmbsu (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
