--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -2,8 +2,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
 
   * Issue 2611: Fix for zfs panic when accessing special files in snapshot
   * Issue 2626: Fix for zfs panic in dmu_objset_stat
+  * Issue 3315: zfs scrub/resilver performance backport
 
- -- Vineeth Pillai <vineeth@nexenta.com>  Wed, 20 Oct 2010 20:34:25 +0530
+ -- Nexenta Systems <support@nexenta.com>  Thu, 16 Dec 2010 12:37:36 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
