--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -3,8 +3,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 2611: Fix for zfs panic when accessing special files in snapshot
   * Issue 2626: Fix for zfs panic in dmu_objset_stat
   * Issue 3315: zfs scrub/resilver performance backport
+  * Issue 3319: zfs has a partially deleted file
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 16 Dec 2010 12:37:36 -0800
+ -- Nexenta Systems <maintainer@nexenta.com>  Fri, 17 Dec 2010 01:06:57 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
