Import ncp3-gate 6c0e10b9d42a re #3230 rb144 zpool online txg not synced early enough    bkport-25763e25fe19-spa-async-resume.patch # User Lin Ling <Lin.Ling@Sun.COM> # Date 1276194560 25200 6951283 hotspare_import_001_pos FAILs unless doing a sync before detach

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -5,8 +5,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3315: zfs scrub/resilver performance backport
   * Issue 3319: zfs has a partially deleted file
   * Issue 3360: backport SA related bug fixes
+  * Issue 3230: zpool online txg not synced early enough
 
- -- Nexenta Systems <maintainer@nexenta.com>  Mon, 20 Dec 2010 13:50:05 -0800
+ -- Nexenta Systems <maintainer@nexenta.com>  Tue, 21 Dec 2010 11:45:43 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
