--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -6,8 +6,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3319: zfs has a partially deleted file
   * Issue 3360: backport SA related bug fixes
   * Issue 3230: zpool online txg not synced early enough
+  * Issue 3232: pd_blks_max should be tunable
 
- -- Nexenta Systems <maintainer@nexenta.com>  Tue, 21 Dec 2010 11:45:43 -0800
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 17:11:53 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
