Import ncp3-gate 1e2952cfb296 re #3234 rb147 fix dedup race 6957089    bkport-bdcaf6c09c92-dedup-race.patch # User George Wilson <George.Wilson@Sun.COM> # Date 1277138666 25200 6957089 race between dedup prefetch and table remove

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -8,8 +8,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3230: zpool online txg not synced early enough
   * Issue 3232: pd_blks_max should be tunable
   * Issue 3233: backport several arc related fixes
+  * Issue 3234: fix dedup race 6957089
 
- -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 17:34:15 -0800
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 17:46:39 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
