Import ncp3-gate ce306e0b78e9 re #3235 rb148 zinject can hang system    bkport-b0fe99c06d14-zinject.patch # User Mark J Musante <Mark.Musante@Sun.COM> # Date 1277149691 21600 6960054 faulting data/log device causing cluster head inaccessible

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -9,8 +9,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3232: pd_blks_max should be tunable
   * Issue 3233: backport several arc related fixes
   * Issue 3234: fix dedup race 6957089
+  * Issue 3235: zinject can hang system
 
- -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 17:46:39 -0800
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 17:55:06 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
