Import ncp3-gate a80eb6a2c72a re #3236 rb149 backport 6959651 -- assertion failure in dedup    bkport-2fee57289adb-dedup-assertion.patch # User George Wilson <George.Wilson@Sun.COM> # Date 1277181468 25200 6959651 assertion failed: ddo_total->ddo_dspace == 0, file: ../../common/fs/zfs/ddt.c, line: 460

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -10,8 +10,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3233: backport several arc related fixes
   * Issue 3234: fix dedup race 6957089
   * Issue 3235: zinject can hang system
+  * Issue 3236: backport 6959651 -- assertion failure in dedup
 
- -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 17:55:06 -0800
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 17:58:37 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
