--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -11,8 +11,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3234: fix dedup race 6957089
   * Issue 3235: zinject can hang system
   * Issue 3236: backport 6959651 -- assertion failure in dedup
+  * Issue 3237: backport 6954665 - system stuck spinning in arc
 
- -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 17:58:37 -0800
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 18:04:14 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
