Import ncp3-gate 76f94d998fed re #3238 rb155 backport dnode related improvements    bkport-397e44ebb8a9-dnode-improvements.patch # User Tom Erickson <Tom.Erickson@Sun.COM> # Date 1277404531 25200 6710343 dnode cache should register a dnode_move() callback to limit fragmentation 6583724 dnode_create should not call kmem_cache_constructor directly 6374545 disk write cache flush code overloads buf_t.b_list pointer

--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-100) nexenta; urgency=low
+
+  * Issue 3238: backport dnode related improvements
+ 
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 18:24:47 -0800
+
 sunwckr (5.11.134-12a) nexenta; urgency=low
 
   * Issue 1984: Include fix for bug 6957205 to complete the fix for issue 1861
