--- a/debian/packages/sunwcslr/debian/changelog
+++ b/debian/packages/sunwcslr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcslr (5.11.134-100) nexenta; urgency=low
+
+  * Issue 3238: backport dnode related improvements
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 18:13:00 -0800
+
 sunwcslr (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
