--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -3,8 +3,9 @@ sunwzfsr (5.11.134-100) nexenta; urgency=low
   * Issue 2626: Fix for zfs panic in dmu_objset_stats
   * Issue 3360: backport SA related bug fixes
   * Issue 3236: backport 6959651 -- assertion failure in dedup
+  * Issue 3238: backport dnode related improvements
 
- -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 17:59:08 -0800
+ -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 18:14:04 -0800
 
 sunwzfsr (5.11.134-12) nexenta; urgency=low
 
