Import ncp3-gate 9b540e1bc958 re #3242 txg_wait_synced() is called when unmounting zfs snapshots    bkport-0cc41f673f9d-txg-wait-synced.patch # User Sanjeev Bagewadi <Sanjeev.Bagewadi@Sun.COM> # Date 1277804518 -19800 6937998 txg_wait_synced() is called when unmounting zfs snapshots

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -15,8 +15,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3238: backport dnode related improvements
   * Issue 3417: backport several ZIL related fixes
   * Issue 3241: backport 6952867 recursive rw_enter in dsl_dataset_clone_swap
+  * Issue 3242: txg_wait_synced() is called when unmounting zfs snapshots
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 15:32:48 -0800
+ -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 15:40:09 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
