Import ncp3-gate 181c97a80e68 re #3244 potential data corruption on crash with rename    bkport-9e4f2f9983b9-rename-corruption.patch # User Neil Perrin <Neil.Perrin@Sun.COM> # Date 1278435917 21600 6834694 zfs renames can potentially be committed without the data 6906236 assertion failed in the file zfs_replay.c line 686 6965567 zil.c minor tidy up 6732237 lzjb_compress

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -17,8 +17,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3241: backport 6952867 recursive rw_enter in dsl_dataset_clone_swap
   * Issue 3242: txg_wait_synced() is called when unmounting zfs snapshots
   * Issue 3428: panic from dmu_recv_begin: No such hold X on refcount Y
+  * Issue 3244: potential data corruption on crash with rename
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 15:46:22 -0800
+ -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 15:55:14 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
