--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -18,8 +18,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3242: txg_wait_synced() is called when unmounting zfs snapshots
   * Issue 3428: panic from dmu_recv_begin: No such hold X on refcount Y
   * Issue 3244: potential data corruption on crash with rename
+  * Issue 3245: Extending end of file *may* get lost on replay of writes.
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 15:55:14 -0800
+ -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 22:32:13 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
