--- a/debian/packages/sunwonzfs/debian/changelog
+++ b/debian/packages/sunwonzfs/debian/changelog
@@ -1,3 +1,9 @@
+sunwonzfs (5.11.134-100) nexenta; urgency=low
+
+  * Issue 3417: backport several ZIL related fixes
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 08:20:40 -0800
+
 sunwonzfs (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
