--- a/debian/packages/sunwstmf/debian/changelog
+++ b/debian/packages/sunwstmf/debian/changelog
@@ -1,8 +1,9 @@
 sunwstmf (5.11.134-100) nexenta; urgency=low
 
   * Issue 2626: Fix for zfs panic in dmu_objset_stats
+  * Issue 3417: backport several ZIL related fixes
 
- -- Vineeth Pillai <vineeth@nexenta.com>  Fri, 01 Oct 2010 23:08:13 +0530
+ -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 08:22:22 -0800
 
 sunwstmf (5.11.134-12) nexenta; urgency=low
 
