--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -13,8 +13,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3236: backport 6959651 -- assertion failure in dedup
   * Issue 3237: backport 6954665 - system stuck spinning in arc
   * Issue 3238: backport dnode related improvements
+  * Issue 3417: backport several ZIL related fixes
 
- -- Nexenta Systems <support@nexenta.com>  Tue, 21 Dec 2010 18:09:31 -0800
+ -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 08:21:34 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
