--- a/debian/packages/sunwcsr/debian/changelog
+++ b/debian/packages/sunwcsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsr (5.11.134-100) nexenta; urgency=high
+
+  * Issue 3320: svc.configd leaks severely on 'svcadm refresh some-service'
+
+ -- Gordon Ross <gordon.ross@nexenta.com> Tue Dec 28 17:14:29 -0500
+
 sunwcsr (5.11.134-13) nexenta; urgency=low
 
   * Issue 2406: idmap should map unresolvable SIDs by default.
