--- a/debian/packages/sunwsmbskr/debian/changelog
+++ b/debian/packages/sunwsmbskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbskr (5.11.134-100) nexenta; urgency=high
+
+  * Issue 3393: smbsrv overflows kernel stack
+
+ -- Gordon Ross <gordon.ross@nexenta.com> Tue Dec 28 16:26:32 2010 -0500
+
 sunwsmbskr (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
