--- a/debian/packages/sunwgrub/debian/changelog
+++ b/debian/packages/sunwgrub/debian/changelog
@@ -1,3 +1,9 @@
+sunwgrub (5.11.134-100) nexenta; urgency=low
+
+  * Issue 3247: zfs recursive snapshots take a long time
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 22:50:05 -0800
+
 sunwgrub (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
