--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -20,8 +20,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3244: potential data corruption on crash with rename
   * Issue 3245: Extending end of file *may* get lost on replay of writes.
   * Issue 3246: bad trap in zfs_readdir() if access to dir not granted
+  * Issue 3247: zfs recursive snapshots take a long time
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 22:39:06 -0800
+ -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 22:48:26 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
