--- a/debian/packages/sunwfmd/debian/changelog
+++ b/debian/packages/sunwfmd/debian/changelog
@@ -1,3 +1,9 @@
+sunwfmd (5.11.134-14) nexenta; urgency=low
+
+  * Issue 3435: ZFS DE should ignore ereports prior to pool import
+
+ -- Garrett D'Amore <support@nexenta.com>  Fri, 24 Dec 2010 07:36:57 -0800
+
 sunwfmd (5.11.134-13) nexenta; urgency=low
 
   * Bug #2403: fmd memory footprint constantly increasing
