--- a/debian/packages/sunwmptsas/debian/changelog
+++ b/debian/packages/sunwmptsas/debian/changelog
@@ -1,3 +1,9 @@
+sunwmptsas (5.11.134-100) nexenta; urgency=low
+
+  * Issue 3586: mpt_sas needs to be updated  
+
+ -- Nexenta Systems <support@nexenta.com>  
+
 sunwmptsas (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
