--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -24,8 +24,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3430: zfs prefault race
   * Issue 3435: ZFS DE should ignore ereports prior to pool import
   * Issue 3431: memleak in zil_alloc_lwb
+  * Issue 3443: Allow a pool to be imported with a missing slog
 
- -- Nexenta Systems <support@nexenta.com>  Fri, 24 Dec 2010 15:20:42 -0800
+ -- Nexenta Systems <support@nexenta.com>  Fri, 24 Dec 2010 15:32:17 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
