--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -5,8 +5,9 @@ sunwzfsr (5.11.134-100) nexenta; urgency=low
   * Issue 3236: backport 6959651 -- assertion failure in dedup
   * Issue 3238: backport dnode related improvements
   * Issue 3247: zfs recursive snapshots take a long time
+  * Issue 3443: Allow a pool to be imported with a missing slog
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 22:52:05 -0800
+ -- Nexenta Systems <support@nexenta.com>  Fri, 24 Dec 2010 15:34:12 -0800
 
 sunwzfsr (5.11.134-12) nexenta; urgency=low
 
