Import ncp3-gate 06bc71e68cf7 re #3444 rb229 rollback can leak log blocks    bkport-5d7f2db1e620-zfs-rollback-leak.patch # User Mark Maybee <Mark.Maybee@Sun.COM> # Date 1280504431 21600 6972862 rollback can leak log blocks 6971273 zfs: allocating allocated segment

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -25,8 +25,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3435: ZFS DE should ignore ereports prior to pool import
   * Issue 3431: memleak in zil_alloc_lwb
   * Issue 3443: Allow a pool to be imported with a missing slog
+  * Issue 3444: rollback can leak log blocks
 
- -- Nexenta Systems <support@nexenta.com>  Fri, 24 Dec 2010 15:32:17 -0800
+ -- Nexenta Systems <support@nexenta.com>  Fri, 24 Dec 2010 15:46:50 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
