--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -26,8 +26,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3431: memleak in zil_alloc_lwb
   * Issue 3443: Allow a pool to be imported with a missing slog
   * Issue 3444: rollback can leak log blocks
+  * Issue 3445: assertion failed: BP_GET_DEDUP(zio->io_bp)
 
- -- Nexenta Systems <support@nexenta.com>  Fri, 24 Dec 2010 15:46:50 -0800
+ -- Nexenta Systems <support@nexenta.com>  Fri, 24 Dec 2010 15:54:45 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
