--- a/debian/packages/sunwgrub/debian/changelog
+++ b/debian/packages/sunwgrub/debian/changelog
@@ -1,8 +1,9 @@
-sunwgrub (5.11.134-100) nexenta; urgency=low
+sunwgrub (5.11.134-100) nexenta; urgency=high
 
   * Issue 3247: zfs recursive snapshots take a long time
+  * Issue 3446: zpool cannot replace a replacing device
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 23 Dec 2010 22:50:05 -0800
+ -- Nexenta Systems <support@nexenta.com>  Thu, 13 Jan 2011 08:27:19 -0800
 
 sunwgrub (5.11.134-12) nexenta; urgency=low
 
