--- a/debian/packages/sunwhea/debian/changelog
+++ b/debian/packages/sunwhea/debian/changelog
@@ -1,3 +1,9 @@
+sunwhea (5.11.134-100) nexenta; urgency=low
+
+  *  Issue 3446: zpool cannot replace a replacing device
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 24 Dec 2010 16:05:39 -0800
+
 sunwhea (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
