--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,4 +1,4 @@
-sunwzfskr (5.11.134-100) nexenta; urgency=low
+sunwzfskr (5.11.134-100) nexenta; urgency=high
 
   * Issue 2611: Fix for zfs panic when accessing special files in snapshot
   * Issue 2626: Fix for zfs panic in dmu_objset_stat
@@ -27,8 +27,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=low
   * Issue 3443: Allow a pool to be imported with a missing slog
   * Issue 3444: rollback can leak log blocks
   * Issue 3445: assertion failed: BP_GET_DEDUP(zio->io_bp)
+  * Issue 3446: zpool cannot replace a replacing device
 
- -- Nexenta Systems <support@nexenta.com>  Fri, 24 Dec 2010 15:54:45 -0800
+ -- Nexenta Systems <support@nexenta.com>  Thu, 13 Jan 2011 08:28:10 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
