--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -28,8 +28,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=high
   * Issue 3444: rollback can leak log blocks
   * Issue 3445: assertion failed: BP_GET_DEDUP(zio->io_bp)
   * Issue 3446: zpool cannot replace a replacing device
+  * Issue 3449: zfs diff
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 13 Jan 2011 08:28:10 -0800
+ -- Nexenta Systems <support@nexenta.com>  Thu, 13 Jan 2011 09:57:09 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
