Import ncp3-gate 4e89983d3868 re #3450 rb236 ACL upgrade from zpl version 2 -> 4 don't grab all the necessary tx holds.    bkport-f653a0d643ec-zfs-acl-tx-holds.patch # User Mark Shellenbaum <Mark.Shellenbaum@Oracle.COM> # Date 1281359713 21600 6973827 ACL upgrade from zpl version 2 -> 4 don't grab all the necessary tx holds.

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -29,8 +29,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=high
   * Issue 3445: assertion failed: BP_GET_DEDUP(zio->io_bp)
   * Issue 3446: zpool cannot replace a replacing device
   * Issue 3449: zfs diff
+  * Issue 3450: ACL upgrade from zpl version 2 -> 4 panic
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 13 Jan 2011 09:57:09 -0800
+ -- Nexenta Systems <support@nexenta.com>  Thu, 13 Jan 2011 13:10:12 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
