--- a/debian/packages/sunwmptsas/debian/changelog
+++ b/debian/packages/sunwmptsas/debian/changelog
@@ -1,8 +1,8 @@
 sunwmptsas (5.11.134-100) nexenta; urgency=low
 
-  * Issue 3586: mpt_sas needs to be updated  
+  * Issue 3586: mpt_sas needs to be updated
 
- -- Nexenta Systems <support@nexenta.com>  
+ -- Nexenta Systems <support@nexenta.com>  Fri, 14 Jan 2011 10:41:06 -0800
 
 sunwmptsas (5.11.134-12) nexenta; urgency=low
 
