--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -31,8 +31,9 @@ sunwzfskr (5.11.134-100) nexenta; urgency=high
   * Issue 3449: zfs diff
   * Issue 3450: ACL upgrade from zpl version 2 -> 4 panic
   * Issue 3451: read only zpools
+  * Issue 3617: zdb -vvv regression from zfs diff
 
- -- Nexenta Systems <support@nexenta.com>  Thu, 13 Jan 2011 22:29:15 -0800
+ -- Nexenta Systems <support@nexenta.com>  Fri, 14 Jan 2011 14:37:00 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
