--- a/debian/packages/sunwixgbe/debian/changelog
+++ b/debian/packages/sunwixgbe/debian/changelog
@@ -1,3 +1,9 @@
+sunwixgbe (5.11.134-100) nexenta; urgency=high
+
+  * Issue 3619: Update ixgbe to intel shared code 3.5.13
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 14 Jan 2011 16:32:42 -0800
+
 sunwixgbe (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
