--- a/debian/packages/sunwstmf/debian/changelog
+++ b/debian/packages/sunwstmf/debian/changelog
@@ -3,8 +3,9 @@ sunwstmf (5.11.134-100) nexenta; urgency=high
   * Issue 2626: Fix for zfs panic in dmu_objset_stats
   * Issue 3417: backport several ZIL related fixes
   * Issue 3660: Significant update to COMSTAR
+  * Issue 3218: sbd serial number not preserved by stmf upgrades
 
- -- Nexenta Systems <support@nexenta.com>  Wed, 19 Jan 2011 14:36:24 -0800
+ -- Albert Lee <trisk@nexenta.com>  Fri, 21 Jan 2011 21:00:00 -0500
 
 sunwstmf (5.11.134-12) nexenta; urgency=low
 
