Import ncp3-gate b0d4a2cd19fa re #3320 rb281 svc.configd leaks severely... (fix changelog) re #3393 rb281 smbsrv overflows kernel stack (fix changelog)

--- a/debian/packages/sunwcsr/debian/changelog
+++ b/debian/packages/sunwcsr/debian/changelog
@@ -2,7 +2,7 @@ sunwcsr (5.11.134-100) nexenta; urgency=high
 
   * Issue 3320: svc.configd leaks severely on 'svcadm refresh some-service'
 
- -- Gordon Ross <gordon.ross@nexenta.com> Tue Dec 28 17:14:29 -0500
+ -- Gate Keeper <maintainer@nexenta.com> Tue, 28 Dec 2010 17:14:29 -0500
 
 sunwcsr (5.11.134-13) nexenta; urgency=low
 
