--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-101) nexenta; urgency=low
+
+  * Issue 3726: backport 6859862 Move pfexec into the kernel
+
+ -- Nexenta Systems <gwr@clpro>  Fri, 28 Jan 2011 15:21:11 -0500
+
 sunwckr (5.11.134-100) nexenta; urgency=high
 
   * Issue 3238: backport dnode related improvements
