--- a/debian/packages/sunwcsr/debian/changelog
+++ b/debian/packages/sunwcsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsr (5.11.134-101) nexenta; urgency=low
+
+  * Issue 3726: backport 6859862 Move pfexec into the kernel (partial)
+
+ -- Gate Keeper <gwr@clpro>  Tue, 25 Jan 2011 15:31:10 -0500
+
 sunwcsr (5.11.134-100) nexenta; urgency=high
 
   * Issue 3320: svc.configd leaks severely on 'svcadm refresh some-service'
