--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-101) nexenta; urgency=low
+
+  * Issue 3726: backport 6859862 Move pfexec into the kernel
+
+ -- Nexenta Systems <gwr@clpro>  Fri, 28 Jan 2011 15:27:52 -0500
+
 sunwzfskr (5.11.134-100) nexenta; urgency=high
 
   * Issue 2611: Fix for zfs panic when accessing special files in snapshot
