--- a/debian/packages/sunwsmbfskr/debian/changelog
+++ b/debian/packages/sunwsmbfskr/debian/changelog
@@ -2,7 +2,7 @@ sunwsmbfskr (5.11.134-100) nexenta; urgency=low
 
   * Issue 3726: backport 6859862 Move pfexec into the kernel
 
- -- Gate Keeper <gwr@clpro>  Fri, 28 Jan 2011 15:27:17 -0500
+ -- Gate Keeper <maintainer@nexenta.com>  Fri, 28 Jan 2011 15:27:17 -0500
 
 sunwsmbfskr (5.11.134-12) nexenta; urgency=low
 
