Import ncp3-gate 33cf3e4abdbc re #3832 rb335 iscsit responses truncated to 1 PDU    bkport-44d974917227-iscsit-responses-truncated.patch # User Alexander Stetsenko <ams@nexenta.com> # Date 1295639823 -10800 416 iscsit responses truncated to 1 PDU Reviewed by: eric.schrock@delphix.com Reviewed by: garrett@nexenta.com Approved by: garrett@nexenta.com

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-101) nexenta; urgency=low
+
+  * Issue 3726: backport 6859862 Move pfexec into the kernel
+
+ -- Nexenta Systems <gwr@clpro>  Fri, 28 Jan 2011 15:27:52 -0500
+
 sunwzfskr (5.11.134-100) nexenta; urgency=high
 
   * Issue 2611: Fix for zfs panic when accessing special files in snapshot
@@ -32,9 +38,8 @@ sunwzfskr (5.11.134-100) nexenta; urgency=high
   * Issue 3450: ACL upgrade from zpl version 2 -> 4 panic
   * Issue 3451: read only zpools
   * Issue 3617: zdb -vvv regression from zfs diff
-  * Issue 3726: backport 6859862 Move pfexec into the kernel
 
- -- Nexenta Systems <support@nexenta.com>  Fri, 28 Jan 2011 15:27:52 -0500
+ -- Nexenta Systems <support@nexenta.com>  Fri, 14 Jan 2011 14:37:00 -0800
 
 sunwzfskr (5.11.134-13) nexenta; urgency=low
 
