--- a/debian/packages/sunwcsr/debian/changelog
+++ b/debian/packages/sunwcsr/debian/changelog
@@ -1,9 +1,14 @@
-sunwcsr (5.11.134-100) nexenta; urgency=low
+sunwcsr (5.11.134-101) nexenta; urgency=low
 
-  * Issue 3320: svc.configd leaks severely on 'svcadm refresh some-service'
   * Issue 3726: backport 6859862 Move pfexec into the kernel (partial)
 
- -- Gate Keeper <maintainer@nexenta.com> Tue, 25 Jan 2011 15:31:10 -0500
+ -- Gate Keeper <gwr@clpro>  Tue, 25 Jan 2011 15:31:10 -0500
+
+sunwcsr (5.11.134-100) nexenta; urgency=high
+
+  * Issue 3320: svc.configd leaks severely on 'svcadm refresh some-service'
+
+ -- Gate Keeper <maintainer@nexenta.com> Tue, 28 Dec 2010 17:14:29 -0500
 
 sunwcsr (5.11.134-13) nexenta; urgency=low
 
