--- a/debian/packages/sunwiscsitr/debian/changelog
+++ b/debian/packages/sunwiscsitr/debian/changelog
@@ -1,8 +1,9 @@
 sunwiscsitr (5.11.134-100) nexenta; urgency=high
 
   * Issue 3660: Significant update to COMSTAR
+  * Issue 3832: iscsit responses truncated to 1 PDU
 
- -- Nexenta Systems <support@nexenta.com>  Wed, 19 Jan 2011 14:38:10 -0800
+ -- Albert Lee <trisk@nexenta.com>  Wed, 02 Feb 2011 18:01:57 -0500
 
 sunwiscsitr (5.11.134-12a) nexenta; urgency=low
 
