--- a/debian/packages/sunwsmbfsu/debian/changelog
+++ b/debian/packages/sunwsmbfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-100) nexenta; urgency=low
+
+  * Issue 3846: need smbfs backports
+
+ -- Gate Keeper <maintainer@nexenta.com>  Wed, 03 Feb 2011 15:59:15 -0500
+
 sunwsmbfsu (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
