--- a/debian/packages/sunwigb/debian/changelog
+++ b/debian/packages/sunwigb/debian/changelog
@@ -1,3 +1,9 @@
+sunwigb (5.11.134-100) nexenta; urgency=high
+
+  * Issue 3780: Spontaneous reboot in igb
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 01 Feb 2011 17:59:18 -0800
+
 sunwigb (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
