Import ncp3-gate 90616d5d2abe re #3888 rb376 backport 6942439 Sporadic complete I/O halts    bkport-f3dd638d3435-zfs-vmem-stalls.patch # User Jonathan Adams <Jonathan.Adams@Sun.COM> # Date 1282160856 25200 6863750 kmem metadata in zfs_file_data impedes debugging non-debug crash dumps 6942439 Sporadic complete I/O halts

--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,10 +1,11 @@
-sunwckr (5.11.134-100) nexenta; urgency=low
+sunwckr (5.11.134-100) nexenta; urgency=high
 
   * Issue 3238: backport dnode related improvements
   * Issue 3449: zfs diff
   * Issue 3726: backport 6859862 Move pfexec into the kernel
+  * Issue 3888: backport 6942439 Sporadic complete I/O halts
 
- -- Nexenta Systems <support@nexenta.com>  Fri, 28 Jan 2011 15:21:11 -0500
+ -- Nexenta Systems <support@nexenta.com>  Tue, 08 Feb 2011 14:40:38 -0800
 
 sunwckr (5.11.134-12a) nexenta; urgency=low
 
