Import ncp3-gate f0f89ef80ed0 re #3914 rb390 backport several NFS fixes    bkport-30c794f87c0d-nfs-sharefs.patch # User Pavel Filipensky <Pavel.Filipensky@Sun.COM> # Date 1277301255 -7200 6930814 share/unshare issues 6931194 exportfs() uses exportinfo_t after dropping exported_lock and without doing exi_count++ 6836258 exportinfo 16-way hash is too small 6953045 Put implementation of the Pearson's hashing algorithm into a separate file
   bkport-5cf4013f150c-nfs-recovery.patch
# User Rick Mesta <rick.mesta@sun.com>
# Date 1268183746 21600
6916212 NFSv4 client recovery thread deadlocks after failover

   bkport-7312bbaa193c-nfs-pnfree.patch
# User Marcel Telka <Marcel.Telka@Sun.COM>
# Date 1276697277 -7200
6906432 File system space on globalfilesystem shared by NFS not returned after rm(1) of files on NFS clients
6952856 Minor inconsistencies in rfs4_dss_clear_oldstate()
6954235 ASSERT() in the rfs4_state_has_access() have no effect

   bkport-78110b63b535-nfs-vnrele.patch
# User Pavel Filipensky <Pavel.Filipensky@Sun.COM>
# Date 1279547199 -7200
6970064 missing VN_RELE in exportfs

   bkport-7da42ae5ee37-nfs-panic.patch
# User Pavel Filipensky <Pavel.Filipensky@Sun.COM>
# Date 1276672276 -7200
6954736 stop -f /SYS on one Otoro head causes the other head to panic

   bkport-ee8b50baed68-nfs-dbl-free.patch
# User Marcel Telka <Marcel.Telka@Sun.COM>
# Date 1275371450 -7200
6914555 rfs4_op_rename() can double free converted_onm
6930600 Test for nonzero cs->vp in do_rfs4_op_lookup() cannot be false
6930604 do_rfs4_op_secinfo() can use uninitialized local variable did_traverse

--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -4,8 +4,9 @@ sunwckr (5.11.134-100) nexenta; urgency=high
   * Issue 3449: zfs diff
   * Issue 3726: backport 6859862 Move pfexec into the kernel
   * Issue 3888: backport 6942439 Sporadic complete I/O halts
+  * Issue 3914: backport several NFS fixes
 
- -- Nexenta Systems <support@nexenta.com>  Tue, 08 Feb 2011 14:40:38 -0800
+ -- Nexenta Systems <support@nexenta.com>  Wed, 09 Feb 2011 15:21:11 -0500
 
 sunwckr (5.11.134-12a) nexenta; urgency=low
 
