--- a/debian/packages/sunwnfscu/debian/changelog
+++ b/debian/packages/sunwnfscu/debian/changelog
@@ -1,3 +1,9 @@
+sunwnfscu (5.11.134-100) nexenta; urgency=low
+
+  * Issue 3914: backport several NFS fixes
+
+ -- Gate Keeper <maintainer@nexenta.com>  Wed, 09 Feb 2011 15:59:15 -0500
+
 sunwnfscu (5.11.134-12) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
