Import ncp3-gate 79e9e36cf316 re #3287 rb410 CIFS needs domain controller "hot fail over"  - CIFS backports through Aug 2010    bkport-89c014c50a5f-smbsrv-thr_join.patch # User jose borrego <Jose.Borrego@Sun.COM> # Date 1282025401 21600 6962953 fw_101 : assertion failed in thread_join() from smb_server_delete()
   bkport-e95332bf1454-smbsrv-dc-failover.patch
# User joyce mcintosh <Joyce.McIntosh@Sun.COM>
# Date 1280181733 25200
6779186 need domain controller hot failover
6970986 Level II oplocks - smb_oplock_grant_t shouldn't be dynamically allocated
6971031 Unable add ACL on the share which has only the default owner tab by ZFS
6971899 OpenSSL not MT-safe and takes down smbd
6936762 libidmap should transparently handle interruption in connection to idmapd
6954902 mapping to unknown type does not use directory-based mapping information

   bkport-smbsrv-cr6972305-plus.patch
Extraction of CIFS server fixes, July 27 - Aug 03, 2010

6972305 Preferred DC not selected after setting pdc via sharectl
6971047 smbd hang during FVT regression test
6629382 Security tab shows SID instead of name for Sparc server
6711195 Sparc:Get error "Windows Explorer has stopped working" once click on Details fr Properties on Vista
6971899 OpenSSL not MT-safe and takes down smbd

   bkport-smbsrv-cr6974351-plus.patch
Extraction of CIFS server fixes, Aug 08 - Aug 10, 2010

6719444 [CLI] - idmap help's output is not consistent with man pages's
6975449 idmap test suite needs idmap_cache_get_data() from libidmap
6974351 OpenSSL still taking smbd down

   bkport-smbsrv-sparse-partial.patch
Partial extraction of the changes for:

PSARC/2009/464 Offline attribute
6972515 Offline attribute - PSARC 2009/464
PSARC/2010/037 Windows Sparse Attribute
6972519 Windows Sparse Attribute - PSARC 2010/037

Just taking the smbsrv parts, and leaving mostly disabled.
(Leave out SMB_TREE_SPARSE for zfs in smb_tree.c:smb_mtype[])
This is just to make later merges easier.

--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,12 +1,13 @@
 sunwcsu (5.11.134-100) nexenta; urgency=low
 
-  * Issue 2636 lofiadm/pktool changes for ZFS crypto over lofi devices.
-  * Issue 677: Allow adjustment of cache timeout in idmapd
+  * Issue 2636: lofiadm/pktool changes for ZFS crypto over lofi devices.
+  * Issue 3647: Increase Cache Time for IDMAP Mappings
   * Issue 3868: AD connectivitiy diagnostics
   * Issue 3914: backport several NFS fixes
   * Issue 3901: backport 6952831 SMB level II oplocks (etc.)
+  * Issue 3287: CIFS needs domain controller "hot fail over"
 
- -- Gate Keeper <maintainer@nexenta.com>  Thu, 10 Feb 2011 11:59:15 -0500
+ -- Gate Keeper <maintainer@nexenta.com> Fri, 11 Feb 2011 11:59:15 -0500
 
 sunwcsu (5.11.134-13) nexenta; urgency=low
 
