--- a/debian/packages/sunwcsl/debian/changelog
+++ b/debian/packages/sunwcsl/debian/changelog
@@ -2,8 +2,9 @@ sunwcsl (5.11.134-100) nexenta; urgency=low
 
   * Issue 3238: backport dnode related improvements
   * Issue 3868: AD connectivitiy diagnostics
+  * Issue 3287: CIFS needs domain controller "hot fail over"
 
- -- Gate Keeper <maintainer@nexenta.com> Fri, 04 Feb 2011 16:26:32 -0500
+ -- Gate Keeper <maintainer@nexenta.com> Fri, 11 Feb 2011 11:59:15 -0500
 
 sunwcsl (5.11.134-12) nexenta; urgency=low
 
