--- a/debian/packages/sunwsmbsu/debian/changelog
+++ b/debian/packages/sunwsmbsu/debian/changelog
@@ -3,8 +3,9 @@ sunwsmbsu (5.11.134-100) nexenta; urgency=high
   * Issue 2611: Fix memory leak in smbd/libsmb smb_idmap_getsid
   * Issue 3868: AD connectivitiy diagnostics
   * Issue 3901: backport 6952831 SMB level II oplocks (etc.)
+  * Issue 3287: CIFS needs domain controller "hot fail over"
 
- -- Gate Keeper <maintainer@nexenta.com> Thu, 10 Feb 2011 11:59:15 -0500
+ -- Gate Keeper <maintainer@nexenta.com> Fri, 11 Feb 2011 11:59:15 -0500
 
 sunwsmbsu (5.11.134-12) nexenta; urgency=low
 
