--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 3969: Unable to add/remove ACE after doing idmap flush -a
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 15 Feb 2011 11:13:17 -0800
+
 sunwzfskr (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 2611: Fix for zfs panic when accessing special files in snapshot
