Import ncp3-gate b66dee8aeb57 re #3970 rb436 Offline and sparse attribute support    bkport-sparse-offline-attrs.patch # User joyce mcintosh <Joyce.McIntosh@Sun.COM> # Date 1281570534 25200 PSARC/2009/464 Offline attribute 6972515 Offline attribute - PSARC 2009/464 PSARC/2010/037 Windows Sparse Attribute 6972519 Windows Sparse Attribute - PSARC 2010/037

--- a/debian/packages/sunwhea/debian/changelog
+++ b/debian/packages/sunwhea/debian/changelog
@@ -1,3 +1,9 @@
+sunwhea (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 3970: Offline and sparse attribute support 
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 15 Feb 2011 21:45:33 -0800
+
 sunwhea (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 3446: zpool cannot replace a replacing device
