--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 3970: Offline and sparse attribute support
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 15 Feb 2011 12:51:40 -0800
+
 sunwckr (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 3238: backport dnode related improvements
