--- a/debian/packages/sunwsmbskr/debian/changelog
+++ b/debian/packages/sunwsmbskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbskr (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 3970: Offline and sparse attribute support
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 15 Feb 2011 12:54:13 -0800
+
 sunwsmbskr (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 3393: smbsrv overflows kernel stack
