--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-0-3) nexenta; urgency=low
+
+  * Issue 3974: a couple more ZFS backports
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 15 Feb 2011 23:16:46 -0800
+
 sunwzfskr (5.11.134-31-0-2) nexenta; urgency=low
 
   * Issue 3970: Offline and sparse attribute support
