Import ncp3-gate cbce7c632101 re #2976 rb435 Child folder visibility through shares    cifs-traverse-mounts.patch # User Gordon Ross <gwr@nexenta.com> # Date 1297823222 18000 re #2976 Child folder visibility through shares

--- a/debian/packages/sunwsmbsu/debian/changelog
+++ b/debian/packages/sunwsmbsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbsu (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 2976: Child folder visibility through shares
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 16 Feb 2011 13:25:13 -0800
+
 sunwsmbsu (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 2611: Fix memory leak in smbd/libsmb smb_idmap_getsid
