--- a/debian/packages/sunwsmbskr/debian/changelog
+++ b/debian/packages/sunwsmbskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbskr (5.11.134-31-0-2) nexenta; urgency=low
+
+  * Issue 2976: Child folder visibility through shares
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 16 Feb 2011 13:25:13 -0800
+
 sunwsmbskr (5.11.134-31-0-1) nexenta; urgency=low
 
   * Issue 3970: Offline and sparse attribute support
