Import ncp3-gate 3f485fb96559 re #3987 backport numerous VM subsystem fixes/improvements    bkport-12df01648ca5-vm-lock-scale.patch # User Peter Rival <Frank.Rival@oracle.com> # Date 1272043565 14400 6778289 vm locks need to scale with the size of system (strands/memory size)
   bkport-2bc0f474d551-vmmeter-eof.patch
# User John Levon <john.levon@sun.com>
# Date 1276219638 25200
PSARC 2004/445 EOF of vmstat -c option
4801975 remove flushmeter + kstats after EOF period (PSARC 2004/445)
5034996 remove vmstat -c (after EOF period for PSARC 2004/445)

   bkport-3c537b2a7425-km-normalpri.patch
# User Stan Studzinski <Stan.Studzinski@Sun.COM>
# Date 1271181836 25200
6675738 KM_NOSLEEP may still try too hard for some allocations

   bkport-542e7ffc22d6-vmodsort-nfs.patch
# User Pavel Filipensky <Pavel.Filipensky@Sun.COM>
# Date 1268291469 0
6213799 VMODSORT support for NFS. AKA "close()/fsync() slow on clients with lots of memory and cached pages"

   bkport-79b43747e259-page-retire.patch
# User Stan Studzinski <Stan.Studzinski@Sun.COM>
# Date 1270849604 25200
6885904 active segkp pages can not be retired

   bkport-80a39220b451-freemem-contention.patch
# User Pavel Tatashin <Pavel.Tatashin@Sun.COM>
# Date 1280154276 25200
6948098 freemem_lock contention causes poor concurrent DISM MC_LOCK/MC_UNLOCK performance
6946742 sfmmu_mlspl_enter lock contention on mml_table
6956454 ani_free_pool lock contention with multi processed ISM

   bkport-8bf29e93b289-memscrubber.patch
# User Vijay S Balakrishna <Vijay.Balakrishna@Sun.COM>
# Date 1267498971 28800
6910864 memscrubber should not scrub pages *scheduled* for retirement

   bkport-9552c31d849c-ah-lock-size.patch
# User Michael Corcoran <Michael.Corcoran@Sun.COM>
# Date 1271460891 25200
6322069 Unscalability of AH_LOCK_SIZE causes anonhash_lock contention on larger systems

   bkport-c68907917e95-page-mark-migrate.patch
# User Donghai Qiao <Donghai.Qiao@Sun.COM>
# Date 1266605617 18000
4926117 page_mark_migrate() could be a bit ef

--- a/debian/packages/sunwnfsckr/debian/changelog
+++ b/debian/packages/sunwnfsckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwnfsckr (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 3987: backport numerous VM subsystem fixes/improvements
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 16 Feb 2011 13:43:52 -0800
+
 sunwnfsckr (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 3914: backport several NFS fixes
