--- a/debian/packages/libsunw-perl/debian/changelog
+++ b/debian/packages/libsunw-perl/debian/changelog
@@ -1,3 +1,9 @@
+libsunw-perl (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 3987: backport numerous VM subsystem fixes/improvements
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 16 Feb 2011 13:56:15 -0800
+
 libsunw-perl (5.11.134-31-0-0) nexenta; urgency=low
 
   * Synchronized with OpenSolaris code (5.11 build 134)
