--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-31-0-3) nexenta; urgency=low
+
+  * Issue 3987: backport numerous VM subsystem fixes/improvements
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 16 Feb 2011 13:42:13 -0800
+
 sunwckr (5.11.134-31-0-2) nexenta; urgency=low
 
   * Issue 3974: a couple more ZFS backports
