--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 3987: backport numerous VM subsystem fixes/improvements
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 16 Feb 2011 13:54:57 -0800
+
 sunwcsu (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 2636: lofiadm/pktool changes for ZFS crypto over lofi devices.
