--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-31-0-4) nexenta; urgency=low
+
+  * Issue 2752: dD flags are missing
+
+ -- Albert Lee <trisk@nexenta.com>  Wed, 16 Feb 2011 02:10:44 -0500
+
 sunwckr (5.11.134-31-0-3) nexenta; urgency=low
 
   * Issue 3987: backport numerous VM subsystem fixes/improvements
