--- a/debian/packages/sunwcslr/debian/changelog
+++ b/debian/packages/sunwcslr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcslr (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 2752: dD flags are missing
+
+ -- Albert Lee <trisk@nexenta.com>  Wed, 16 Feb 2011 02:10:44 -0500
+
 sunwcslr (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 3238: backport dnode related improvements
