--- a/debian/packages/sunwzfsu/debian/changelog
+++ b/debian/packages/sunwzfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsu (5.11.134-31-0-1) nexenta; urgency=high
+
+  * Issue 2399: Editing a file with vi strips inherited ACLs
+
+ -- Albert Lee <trisk@nexenta.com>  Wed, 16 Feb 2011 02:10:44 -0500
+
 sunwzfsu (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 2626: Fix for zfs panic in dmu_objset_stat
