Import ncp3-gate 8718ef364f5c re #4019 rb473 aclinherit=restricted does not "trim" ACEs quite right    zfs-acl-trim.patch

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-0-5) nexenta; urgency=high
+
+  * Issue 4019: aclinherit=restricted does not "trim" ACEs quite right
+
+ -- Albert Lee <trisk@nexenta.com>  Mon, 21 Feb 2011 17:45:52 -0500
+
 sunwzfskr (5.11.134-31-0-4) nexenta; urgency=high
 
   * Issue 2399: Editing a file with vi strips inherited ACLs
