--- a/debian/packages/sunwiscsidmr/debian/changelog
+++ b/debian/packages/sunwiscsidmr/debian/changelog
@@ -1,3 +1,9 @@
+sunwiscsidmr (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 3834: target redirection doesn't work for iscsi initiator
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 19 Jan 2011 14:52:17 -0800
+
 sunwiscsidmr (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 3660: Significant update to COMSTAR
