--- a/debian/packages/sunwcsr/debian/changelog
+++ b/debian/packages/sunwcsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsr (5.11.134-31-0-1) nexenta; urgency=low
+
+  * Issue 2813: need to support long passwords 
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 23 Feb 2011 13:17:25 -0800
+
 sunwcsr (5.11.134-31-0-0) nexenta; urgency=low
 
   * Issue 3320: svc.configd leaks severely on 'svcadm refresh some-service'
